# security_tools

./: .env.example  .gitignore  config.py  main.py  pyproject.toml  readme.md  requirements.txt  setup.py  utils.py
bluetooth_manager/: manage_bluetooth.sh
browser_utilities/: crypto_trading_open.sh  dexscreener_navigator.py  get_firefox_profiles.sh  list_chrome_profiles.sh  readme.md
debian_safety_packages/: install_packages.sh  readme.md
exif_reader/: exif_reader.py
ipsweeper/: ipsweeper.sh  readme.md
open_vpn_tools/: select_interface.sh  start_vpn.sh
other_utilities/: installing_pycharm_pro.md
port_scanner/: portscanner.sh  readme.md
setup_cloudflared_doh/: install_cloudflared.sh  readme.md  reset-dns-to-default.sh  setup-cloudflared-doh.sh
tests/: test_utils.py
vpn_killswitch/: find_network_vars.sh  openvpn_killswitch.sh  readme.md
vpn_leak_detector/: detect_leaks.py  get_ip_details.sh
