[tool.poetry]
name = "reflection-agent"
version = "0.1.0"
description = ""
authors = ["Dan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.0"
black = "^25.1.0"
isort = "^6.0.1"
langchain = "^0.3.21"
langchain-openai = "^0.3.10"
langgraph = "^0.3.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
